# L5GN-Tools

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.py  verify.py
.githooks/: pre-commit
auditors/: __init__.py  auditor_cli_contract.py  auditor_doc_claims.py  auditor_readonly.py  auditor_stdlib.py  auditor_tool_contract.py  auditor_uat_stamp.py
chronicler/: CLOSEOUT_PROMPT.md  README.md  __init__.py  scrape_gemini_share.py
config/: authors.json  local.json.example  machines.json
deploy/: README.md  chronicler-ingest.path  chronicler-ingest.service  pull-report.ps1  push-exports.ps1
docs/: ARCHITECTURE.md  COWORK_BRIEF_build_round_1.md  COWORK_BRIEF_build_round_2.md  COWORK_BRIEF_build_round_3.md  COWORK_BRIEF_chronicler_alignment.md  COWORK_BRIEF_estate_restructure.md  COWORK_BRIEF_file_census.md  COWORK_BRIEF_intent_evidence.md  COWORK_BRIEF_projects_reconciliation.md  COWORK_REPORT_file_census.md  COWORK_REPORT_intent_evidence.md  COWORK_REPORT_projects_reconciliation.md  COWORK_ROUND_2_REPORT.md  COWORK_ROUND_3_REPORT.md  DECISIONS.md  HANDOFF.md  INTENT.md  KNIGHT_PLAYBOOK.md  NEXT_SESSION_PLAN.md  PRODUCER_PLAYBOOK.md  PRODUCER_SETUP.md  README.md  RUNBOOK_collect_reconciliation_evidence.md  UAT_file_census.md  UAT_intent_evidence.md  UAT_projects_reconciliation.md  UAT_rig_only.md  UAT_round_3.md  UAT_round_3_results.md  chronicler_db_finalize_brief.md  chronicler_investigation_2026-07-18.md  chronicler_system_design.md  cowork_tasks_cleanup_and_qol.md  project_linking_skillset_spec.md
l5gntools/: __init__.py  backup.py  census.py  common.py  config.py  consume.py  contract.py  dbsafe.py  deposit.py  registry.py  report.py  scrape.py  viewer.py
tests/: __init__.py  _fixture.py  tester_authors.py  tester_backup.py  tester_build_activity.py  (+25 more)
(+63 files in other folders)
